<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainScreen"
    android:background="@drawable/gradient_background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quotes"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:fontFamily="serif"
                android:textSize="15sp"/>
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#fff"
                app:cardCornerRadius="50dp"
                app:cardElevation="20dp"
                android:elevation="12dp"
                android:innerRadius="0dp"
                android:shape="ring"
                android:thicknessRatio="1.9"
                android:layout_gravity="center"
                android:layout_marginTop="10dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/coronavirus"
                android:scaleType="centerCrop"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="#fff"
                app:cardCornerRadius="7dp"
                app:cardElevation="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/totalCasesOfWorld"
                        android:textColor="@color/totalCase"
                        android:gravity="center"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/totalCase"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:id="@+id/tvTotalCases"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:weightSum="2"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:padding="5dp"
                            android:gravity="center">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif-condensed-medium"
                                android:text="@string/recovered"
                                android:textColor="@color/recovered"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="serif-monospace"
                                android:textColor="@color/recovered"
                                android:textSize="20sp"
                                android:textStyle="bold"
                                android:id="@+id/tvRecovered"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:padding="5dp"
                            android:gravity="center">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif-condensed-medium"
                                android:text="@string/death"
                                android:textColor="@color/death"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="serif-monospace"
                                android:textColor="@color/death"
                                android:textSize="20sp"
                                android:textStyle="bold"
                                android:id="@+id/tvDeath"/>
                        </LinearLayout>

                    </LinearLayout>


                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="#fff"
                app:cardCornerRadius="7dp"
                app:cardElevation="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/activeCases"
                        android:textColor="@color/totalCase"
                        android:gravity="center"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/totalCase"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:id="@+id/tvActive"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:weightSum="2"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:padding="5dp"
                            android:gravity="center">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif-condensed-medium"
                                android:text="@string/mildCondition"
                                android:textColor="@color/recovered"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="serif-monospace"
                                android:textColor="@color/recovered"
                                android:textSize="20sp"
                                android:textStyle="bold"
                                android:id="@+id/tvMild"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:padding="5dp"
                            android:gravity="center">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif-condensed-medium"
                                android:text="@string/critical"
                                android:textColor="@color/death"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="serif-monospace"
                                android:textColor="@color/death"
                                android:textSize="20sp"
                                android:textStyle="bold"
                                android:id="@+id/tvCritical"/>
                        </LinearLayout>

                    </LinearLayout>


                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:id="@+id/progressBar"
        android:layout_centerInParent="true"
        android:indeterminateDrawable="@drawable/custom_progressbar"/>
</RelativeLayout>