<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment.Country"
    android:background="@drawable/gradient_background"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/title"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"
                android:id="@+id/countryName"
                android:fontFamily="serif"
                android:textSize="15sp"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                android:layout_gravity="center_horizontal"
                android:id="@+id/flag"/>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="#fff"
                app:cardCornerRadius="7dp"
                app:cardElevation="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/totalCase"
                        android:gravity="center"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:weightSum="2"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:padding="5dp"
                            android:gravity="center">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif-condensed-medium"
                                android:text="@string/totalPopulation"
                                android:textColor="@color/lightTotalCases"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="serif-monospace"
                                android:textColor="@color/population"
                                android:textSize="20sp"
                                android:textStyle="bold"
                                android:id="@+id/tvPopulation"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:padding="5dp"
                            android:gravity="center">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif-condensed-medium"
                                android:text="@string/totalTest"
                                android:textColor="@color/test"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="serif-monospace"
                                android:textColor="@color/testLight"
                                android:textSize="20sp"
                                android:textStyle="bold"
                                android:id="@+id/tvTest"/>
                        </LinearLayout>

                    </LinearLayout>




                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="#fff"
                app:cardCornerRadius="7dp"
                app:cardElevation="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/totalCasesOfCountry"
                        android:textColor="@color/totalCase"
                        android:gravity="center"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/totalCase"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:id="@+id/tvTotalCases"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:weightSum="2"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:padding="5dp"
                            android:gravity="center">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif-condensed-medium"
                                android:text="@string/recovered"
                                android:textColor="@color/recovered"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="serif-monospace"
                                android:textColor="@color/recovered"
                                android:textSize="20sp"
                                android:textStyle="bold"
                                android:id="@+id/tvRecovered"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:padding="5dp"
                            android:gravity="center">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif-condensed-medium"
                                android:text="@string/death"
                                android:textColor="@color/death"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="serif-monospace"
                                android:textColor="@color/death"
                                android:textSize="20sp"
                                android:textStyle="bold"
                                android:id="@+id/tvDeath"/>
                        </LinearLayout>

                    </LinearLayout>


                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="#fff"
                app:cardCornerRadius="7dp"
                app:cardElevation="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/activeCases"
                        android:textColor="@color/totalCase"
                        android:gravity="center"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/totalCase"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:id="@+id/tvActive"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:weightSum="2"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:padding="5dp"
                            android:gravity="center">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif-condensed-medium"
                                android:text="@string/mildCondition"
                                android:textColor="@color/recovered"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="serif-monospace"
                                android:textColor="@color/recovered"
                                android:textSize="20sp"
                                android:textStyle="bold"
                                android:id="@+id/tvMild"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:padding="5dp"
                            android:gravity="center">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif-condensed-medium"
                                android:text="@string/critical"
                                android:textColor="@color/death"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="serif-monospace"
                                android:textColor="@color/death"
                                android:textSize="20sp"
                                android:textStyle="bold"
                                android:id="@+id/tvCritical"/>
                        </LinearLayout>

                    </LinearLayout>


                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="#fff"
                app:cardCornerRadius="7dp"
                app:cardElevation="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/LiveInfo"
                        android:textColor="@color/totalCase"
                        android:gravity="center"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:weightSum="2"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:padding="5dp"
                            android:gravity="center">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif-condensed-medium"
                                android:text="@string/newCases"
                                android:textColor="@color/lightTotalCases"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="serif-monospace"
                                android:textColor="@color/lightTotalCases"
                                android:textSize="20sp"
                                android:textStyle="bold"
                                android:id="@+id/tvNewCases"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:padding="5dp"
                            android:gravity="center">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif-condensed-medium"
                                android:text="@string/newDeath"
                                android:textColor="@color/death"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="serif-monospace"
                                android:textColor="@color/death"
                                android:textSize="20sp"
                                android:textStyle="bold"
                                android:id="@+id/tvNewDeath"/>
                        </LinearLayout>

                    </LinearLayout>




                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </ScrollView>
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:id="@+id/progressBar"
        android:layout_centerInParent="true"/>


</LinearLayout>